\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.3.1++}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Specify non-linear models in a (hopefully) more
      intuitive way using \code{brmsformula}.
      \item Fix auxiliary parameters to certain values
      through \code{brmsformula}.
      \item Introduce new function \code{prior_} allowing
      to specify priors using one-sided formulas or \code{quote}.
      \item Pass priors to \pkg{Stan} directly without
      performing any checks by setting \code{check = FALSE} 
      in \code{set_prior}.
      \item Introduce method \code{nsamples} to extract
      the number of posterior samples.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Change structure of \code{brmsformula}
      objects to be more reliable and easier to extend.
      \item Make sure that parameter \code{nu} never 
      falls below \code{1} to reduce convergence problems
      when using family \code{student}.
      \item Deprecate argument \code{nonlinear}.
      \item Deprecate family \code{geometric}.
      \item Rename \code{cov_fixed} to \code{cor_fixed}.
      \item Make handling of addition terms more transparent
      by exporting and documenting related functions.
      \item Remove many units tests of internal functions
      and add tests of user-facing functions instead.
      \item Import some generics from \pkg{nlme} instead
      of \pkg{lme4} to remove dependency on the latter one.
      \item Do not apply \code{structure} to \code{NULL}
      anymore to get rid of warnings in \R-devel.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Make sure that the data of models with
      only a single observation are compatible with 
      the generated \pkg{Stan} code.
      \item Handle argument \code{algorithm} 
      correctly in \code{update.brmsfit}.
      \item Fix a bug sometimes causing an error in
      \code{marginal_effects} when using family