@@ -12,7 +12,7 @@
 
 <meta name="author" content="Paul Bürkner" />
 
-<meta name="date" content="2016-12-29" />
+<meta name="date" content="2017-01-17" />
 
 <title>Parameterization of Response Distributions in brms</title>
 
@@ -32,7 +32,7 @@
 
 <h1 class="title toc-ignore">Parameterization of Response Distributions in brms</h1>
 <h4 class="author"><em>Paul Bürkner</em></h4>
-<h4 class="date"><em>2016-12-29</em></h4>
+<h4 class="date"><em>2017-01-17</em></h4>
 
 
 
@@ -49,7 +49,7 @@
 <div id="location-shift-models" class="section level2">
 <h2>Location shift models</h2>
 <p>The density of the <strong>gaussian</strong> family is given by <span class="math display">\[f(y_i) = \frac{1}{\sqrt{2\pi}\sigma} \exp\left(-\frac{1}{2}\left(\frac{y_i - g(\eta_i)}{\sigma}\right)^2\right)\]</span> where <span class="math inline">\(\sigma\)</span> is the residual standard deviation. The density of the <strong>student</strong> family is given by <span class="math display">\[f(y_i) = \frac{\Gamma((\nu + 1)/2)}{\Gamma(\nu/2)} \frac{1}{\sqrt{\nu\pi}\sigma}
-\left(1 + \frac{1}{\nu} \left(\frac{y_i - g(\eta_i)}{\sigma}\right)^2\right)^{-(\nu+1)/2}\]</span> <span class="math inline">\(\Gamma\)</span> denotes the gamma function and <span class="math inline">\(\nu\)</span> are the degrees of freedom. As <span class="math inline">\(\nu \rightarrow \infty\)</span>, the student distribution becomes the gaussian distribution. For location shift models, <span class="math inline">\(y_i\)</span> can be any real value.</p>
+\left(1 + \frac{1}{\nu} \left(\frac{y_i - g(\eta_i)}{\sigma}\right)^2\right)^{-(\nu+1)/2}\]</span> <span class="math inline">\(\Gamma\)</span> denotes the gamma function and <span class="math inline">\(\nu &gt; 1\)</span> are the degrees of freedom. As <span class="math inline">\(\nu \rightarrow \infty\)</span>, the student distribution becomes the gaussian distribution. For location shift models, <span class="math inline">\(y_i\)</span> can be any real value.</p>
 </div>
 <div id="binary-and-count-data-models" class="section level2">
 <h2>Binary and count data models</h2>
@@ -61,7 +61,7 @@
 <h2>Survival models</h2>
 <p>With survival models we mean all models that are defined on the positive reals only, that is <span class="math inline">\(y_i \in \mathbb{R}^+\)</span>. The density of the <strong>lognormal</strong> family is given by <span class="math display">\[f(y_i) = \frac{1}{\sqrt{2\pi}\sigma x} \exp\left(-\frac{1}{2}\left(\frac{\log(y_i) - g(\eta_i)}{\sigma}\right)^2\right)\]</span> where <span class="math inline">\(\sigma\)</span> is the residual standard deviation on the log-scale. The density of the <strong>Gamma</strong> family is given by <span class="math display">\[f(y_i) = \frac{(\alpha / g(\eta_i))^\alpha}{\Gamma(\alpha)} y_i^{\alpha-1} 
 \exp\left(-\frac{\alpha y_i}{g(\eta_i)}\right)\]</span> where <span class="math inline">\(\alpha\)</span> is a positive shape parameter. The density of the <strong>weibull</strong> family is given by <span class="math display">\[f(y_i) = \frac{\alpha}{g(\eta_i / \alpha)} \left(\frac{y_i}{g(\eta_i / \alpha)}\right)^{\alpha-1} 
-\exp\left(-\left(\frac{y_i}{g(\eta_i / \alpha)}\right)^\alpha\right)\]</span> where <span class="math inline">\(\alpha\)</span> is again a positive shape parameter. The <strong>exponential</strong> family arises if <span class="math inline">\(\alpha\)</span> is set to <span class="math inline">\(1\)</span> for either the gamma or weibull distribution.</p>
+\exp\left(-\left(\frac{y_i}{g(\eta_i / \alpha)}\right)^\alpha\right)\]</span> where <span class="math inline">\(\alpha\)</span> is again a positive shape parameter. The <strong>exponential</strong> family arises if <span class="math inline">\(\alpha\)</span> is set to <span class="math inline">\(1\)</span> for either the gamma or Weibull distribution. The density of the <strong>frechet</strong> distribution is given by <span class="math display">\[f(y_i) = \frac{\nu}{s_i} \left(\frac{y_i}{s_i}\right)^{-1-\nu} \exp\left(-\left(\frac{y_i}{s_i}\right)^{-\nu}\right)\]</span> where <span class="math inline">\(s_i = g(\eta_i) / \Gamma(1 - 1 / \nu)\)</span> is a positive scale parameter and <span class="math inline">\(\nu &gt; 1\)</span> is a shape parameter so that <span class="math inline">\(g(\eta_i)\)</span> predicts the mean of the Frechet distribution.</p>
 </div>
 <div id="response-time-models" class="section level2">
 <h2>Response time models</h2>
