@@ -24,7 +24,7 @@ $$f(y_i) = \frac{1}{\sqrt{2\pi}\sigma} \exp\left(-\frac{1}{2}\left(\frac{y_i - g
 where $\sigma$ is the residual standard deviation. The density of the **student** family is given by
 $$f(y_i) = \frac{\Gamma((\nu + 1)/2)}{\Gamma(\nu/2)} \frac{1}{\sqrt{\nu\pi}\sigma}
 \left(1 + \frac{1}{\nu} \left(\frac{y_i - g(\eta_i)}{\sigma}\right)^2\right)^{-(\nu+1)/2}$$
-$\Gamma$ denotes the gamma function and $\nu$ are the degrees of freedom. As $\nu \rightarrow \infty$, the student distribution becomes the gaussian distribution. For location shift models, $y_i$ can be any real value.
+$\Gamma$ denotes the gamma function and $\nu > 1$ are the degrees of freedom. As $\nu \rightarrow \infty$, the student distribution becomes the gaussian distribution. For location shift models, $y_i$ can be any real value.
 
 ## Binary and count data models
 
@@ -50,7 +50,10 @@ $$f(y_i) = \frac{(\alpha / g(\eta_i))^\alpha}{\Gamma(\alpha)} y_i^{\alpha-1}
 where $\alpha$ is a positive shape parameter. The density of the **weibull** family is given by
 $$f(y_i) = \frac{\alpha}{g(\eta_i / \alpha)} \left(\frac{y_i}{g(\eta_i / \alpha)}\right)^{\alpha-1} 
 \exp\left(-\left(\frac{y_i}{g(\eta_i / \alpha)}\right)^\alpha\right)$$
-where $\alpha$ is again a positive shape parameter. The **exponential** family arises if $\alpha$ is set to $1$ for either the gamma or weibull distribution.
+where $\alpha$ is again a positive shape parameter. The **exponential** family arises if $\alpha$ is set to $1$ for either the gamma or Weibull distribution.
+The density of the **frechet** distribution is given by
+$$f(y_i) = \frac{\nu}{s_i} \left(\frac{y_i}{s_i}\right)^{-1-\nu} \exp\left(-\left(\frac{y_i}{s_i}\right)^{-\nu}\right)$$
+where $s_i = g(\eta_i) / \Gamma(1 - 1 / \nu)$ is a positive scale parameter and $\nu > 1$ is a shape parameter so that $g(\eta_i)$ predicts the mean of the Frechet distribution.
 
 ## Response time models
 
